--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=eventostec
+spring.datasource.url=jdbc:postgresql://localhost:5433/eventosdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+aws.region=us-east-1
+aws.bucket.name=eventos-imagens-mpvd
