feat : update project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/eventosdb
+spring.datasource.url=jdbc:postgresql://eventos-database.chc22oyckwjr.us-east-1.rds.amazonaws.com/postgres
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=U7QqGWX([hWe~a858$gBSGcY*AH#
 spring.datasource.driver-class-name=org.postgresql.Driver
 aws.region=us-east-1
 aws.bucket.name=eventos-imagens-mpvd
